# audio-classification

./: .gitignore  EXPERIMENTS_LOG.md  README.md  pyproject.toml
config/: cnn_mel_1.yaml  cnn_mel_2.yaml  cnn_mel_3.yaml  cnn_mel_4.yaml  cnn_mfcc_1.yaml  features.yaml  lstm_mel_1.yaml  lstm_mfcc_1.yaml
docs/team/: GIT_GUIDE.md  TEAM_SETUP.md  infra_reference.md
infra/: artifacts.py  cli.py  cli_utils.py  data_models.py  io_utils.py  log_utils.py  pipeline.py  preprocessing.py
models/: cnn_mel.py  cnn_mfcc.py  cross_val.py  eval.py  lstm_mel.py  lstm_mfcc.py  train.py
tests/: test_dataset_class.py  test_lstm_mfcc.py  test_preprocessing.py
