[project]
name = "audio-classification"
version = "0.1.0"
description = "2 models 2 represetations = 4 experiments"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "typer>=0.24.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0",
]
cu128 = [
    "torch>=2.10.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infra*", "models*"]

[project.scripts]
audio-clf = "infra.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running tests"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true